--- a/roles/bookstack/tasks/main.yml
+++ b/roles/bookstack/tasks/main.yml
@@ -17,6 +17,11 @@
 - name: MariaDB Role
   ansible.builtin.include_role:
     name: mariadb
+  vars:
+    mariadb_name: "{{ bookstack_name }}_mariadb"
+    mariadb_docker_env_db: "{{ bookstack_name }}"
+    mariadb_paths_folder: "{{ bookstack_name }}"
+    mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
 
 - name: MariaDB | Create bookstackapp database
   community.mysql.mysql_db:
@@ -25,6 +30,9 @@
     login_user: "root"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
+
+- name: Import Default MariaDB variables
+  ansible.builtin.include_vars: /srv/git/saltbox/roles/mariadb/defaults/main.yml
 
 - name: Remove existing Docker container
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/remove_docker_container.yml"
