Gitea: MariaDB Refactor

--- a/roles/gitea/tasks/main.yml
+++ b/roles/gitea/tasks/main.yml
@@ -17,6 +17,11 @@
 - name: MariaDB Role
   ansible.builtin.include_role:
     name: mariadb
+  vars:
+    mariadb_name: "{{ gitea_name }}_mariadb"
+    mariadb_docker_env_db: "{{ gitea_name }}"
+    mariadb_paths_folder: "{{ gitea_name }}"
+    mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
 
 - name: MariaDB | Create gitea database
   community.mysql.mysql_db:
