Rocket.Chat: MongoDB Refactor

--- a/roles/rocketchat/tasks/main.yml
+++ b/roles/rocketchat/tasks/main.yml
@@ -11,8 +11,15 @@
   ansible.builtin.include_role:
     name: mongodb
   vars:
-    mongodb_instances: ["rocketchat_db"]
+    mongodb_instances: ["{{ rocketchat_name }}_mongo"]
     mongodb_docker_commands: "mongod --oplogSize 128 --replSet rs0"
+    mongodb_docker_env_db: "{{ rocketchat_name }}"
+    mongodb_docker_image_tag: "4.4"
+    mongodb_paths_folder: "{{ rocketchat_name }}"
+    mongodb_paths_location: "{{ server_appdata_path }}/{{ mongodb_paths_folder }}/mongodb"
+
+- name: Import Default MongoDB variables
+  ansible.builtin.include_vars: /srv/git/saltbox/roles/mongodb/defaults/main.yml
 
 - name: Add DNS record
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/dns/tasker.yml"
@@ -39,7 +46,7 @@
   community.docker.docker_container:
     name: "rocketchat-mongo-init-replica"
     image: "mongo:latest"
-    command: 'bash -c "for i in `seq 1 30`; do mongo rocketchat_db/rocketchat --eval \"rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})\" && s=$$? && break || s=$$?; echo \"Tried $$i times. Waiting 5 secs...\"; sleep 5; done; (exit $$s)"'
+    command: 'bash -c "for i in `seq 1 30`; do mongo {{ mongodb_name }}/{{ mongodb_docker_env_db }} --eval \"rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})\" && s=$$? && break || s=$$?; echo \"Tried $$i times. Waiting 5 secs...\"; sleep 5; done; (exit $$s)"'
     networks:
       - name: saltbox
     comparisons:
