--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -11,7 +11,8 @@
   ansible.builtin.include_role:
     name: mariadb
   vars:
-    mariadb_name: "{{ nextcloud_name }}_mariadb"
+    mariadb_name: "{{ nextcloud_name }}_mariadb"  # Remove when instance support merged into Saltbox
+    mariadb_instances: ["{{ nextcloud_name }}_mariadb"]
     mariadb_docker_env_db: "{{ nextcloud_name }}"
     mariadb_paths_folder: "{{ nextcloud_name }}"
     mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
