--- a/roles/bookstack/tasks/main.yml
+++ b/roles/bookstack/tasks/main.yml
@@ -26,9 +26,9 @@
 
 - name: MariaDB | Create bookstackapp database
   community.mysql.mysql_db:
-    name: "bookstackapp"
-    login_host: "mariadb"
-    login_user: "root"
+    name: "{{ bookstack_name }}"
+    login_host: "{{ bookstack_name }}_mariadb"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
