--- a/roles/gitea/tasks/main.yml
+++ b/roles/gitea/tasks/main.yml
@@ -26,9 +26,9 @@
 
 - name: MariaDB | Create gitea database
   community.mysql.mysql_db:
-    name: "gitea"
-    login_host: "mariadb"
-    login_user: "root"
+    name: "{{ gitea_name }}"
+    login_host: "{{ gitea_name }}_mariadb"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
