--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -7,30 +7,10 @@
 #                   GNU General Public License v3.0                     #
 #########################################################################
 ---
-- name: MariaDB Role
-  ansible.builtin.include_role:
-    name: mariadb
+- name: "Execute Wordpress roles"
+  ansible.builtin.include_tasks: main2.yml
   vars:
-    mariadb_instances: ["{{ wordpress_name }}_mariadb"]
-    mariadb_docker_env_db: "{{ wordpress_name }}"
-    mariadb_paths_folder: "{{ wordpress_name }}"
-    mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
-
-- name: Import Default MariaDB variables
-  ansible.builtin.include_vars: /srv/git/saltbox/roles/mariadb/defaults/main.yml
-
-- name: Add DNS record
-  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/dns/tasker.yml"
-  vars:
-    dns_record: "{{ lookup('vars', role_name + '_dns_record') }}"
-    dns_zone: "{{ lookup('vars', role_name + '_dns_zone') }}"
-    dns_proxy: "{{ lookup('vars', role_name + '_dns_proxy') }}"
-
-- name: Remove existing Docker container
-  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/remove_docker_container.yml"
-
-- name: Create directories
-  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/directories/create_directories.yml"
-
-- name: Create Docker container
-  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/create_docker_container.yml"
+    wordpress_name: "{{ role }}"
+  with_items: "{{ wordpress_instances }}"
+  loop_control:
+    loop_var: role
