--- a/roles/wordpress/tasks/main2.yml
+++ b/roles/wordpress/tasks/main2.yml
@@ -7,6 +7,18 @@
 #                   GNU General Public License v3.0                     #
 #########################################################################
 ---
+- name: MariaDB Role
+  ansible.builtin.include_role:
+    name: mariadb
+  vars:
+    mariadb_instances: ["{{ wordpress_name }}_mariadb"]
+    mariadb_docker_env_db: "{{ wordpress_name }}"
+    mariadb_paths_folder: "{{ wordpress_name }}"
+    mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
+
+- name: Import Default MariaDB variables
+  ansible.builtin.include_vars: /srv/git/saltbox/roles/mariadb/defaults/main.yml
+
 - name: Add DNS record
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/dns/tasker.yml"
   vars:
@@ -19,14 +31,6 @@
 
 - name: Create directories
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/directories/create_directories.yml"
-
-- name: MariaDB | Create wordpress database
-  community.mysql.mysql_db:
-    name: "{{ lookup('vars', wordpress_name + '_mariadb_name', default=wordpress_mariadb_name) }}"
-    login_host: "{{ lookup('vars', wordpress_name + '_mariadb_login_host', default=wordpress_mariadb_login_host) }}"
-    login_user: "{{ lookup('vars', wordpress_name + '_mariadb_login_user', default=wordpress_mariadb_login_user) }}"
-    login_password: "{{ lookup('vars', wordpress_name + '_mariadb_password', default=wordpress_mariadb_password) }}"
-    state: present
 
 - name: Create Docker container
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/create_docker_container.yml"
