--- a/roles/bookstack/tasks/main.yml
+++ b/roles/bookstack/tasks/main.yml
@@ -22,6 +22,7 @@
     mariadb_docker_env_db: "{{ bookstack_name }}"
     mariadb_paths_folder: "{{ bookstack_name }}"
     mariadb_paths_location: "{{ server_appdata_path }}/{{ mariadb_paths_folder }}/mariadb"
+    mariadb_docker_user: ""
 
 - name: Remove existing Docker container
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/remove_docker_container.yml"
