Create DBs are DB user, not root

--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -20,7 +20,7 @@
   community.mysql.mysql_db:
     name: "{{ nextcloud_name }}"
     login_host: "{{ nextcloud_name }}_mariadb"
-    login_user: "root"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
