--- a/roles/docspell/tasks/main.yml
+++ b/roles/docspell/tasks/main.yml
@@ -25,7 +25,7 @@
   community.mysql.mysql_db:
     name: "{{ docspell_name }}"
     login_host: "{{ docspell_name }}_mariadb"
-    login_user: "root"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
