--- a/roles/invoiceninjav5/tasks/main.yml
+++ b/roles/invoiceninjav5/tasks/main.yml
@@ -21,7 +21,7 @@
   community.mysql.mysql_db:
     name: "{{ invoiceninjav5_name }}"
     login_host: "{{ invoiceninjav5_name }}_mariadb"
-    login_user: "root"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
