--- a/roles/teamspeak/tasks/main.yml
+++ b/roles/teamspeak/tasks/main.yml
@@ -23,7 +23,7 @@
   community.mysql.mysql_db:
     name: "{{ teamspeak_name }}"
     login_host: "{{ teamspeak_name }}_mariadb"
-    login_user: "root"
+    login_user: "{{ mariadb_docker_env_user }}"
     login_password: "{{ mariadb_docker_env_password }}"
     state: present
 
